--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "tp5 devweb",
     "main": "server-http.mjs",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "http-dev": "cross-env NODE_ENV=development nodemon server-http.mjs",
+        "http-prod": "cross-env NODE_ENV=production node server-http.mjs"
     },
     "author": "0NITE",
     "license": "ISC",
