--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
         "cross-env": "^7.0.3"
     },
     "devDependencies": {
-        "nodemon": "^3.0.1"
+        "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-jest": "^27.4.0",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-security": "^1.7.1",
+        "eslint-plugin-unicorn": "^48.0.1",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.3"
     }
 }
