--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "author": "0NITE",
     "license": "ISC",
     "dependencies": {
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "express": "^4.18.2",
+        "http-errors": "^2.0.0",
+        "loglevel": "^1.8.1",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "eslint": "^8.50.0",
